[FIX][UI] bs5: Restore spacing above and below site logo in not-fixed-top headers.
(cherry picked from commit c854a641c53cea4b6331af3dfa6c50c7b98ab56b)

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -1452,9 +1452,9 @@ li.archivedate {
 .box-share > div {
   text-align: center;
 }
-header.fixed-top .sitelogo {
-  margin-top: 0.7rem;
-  margin-bottom: 0.7rem;
+header:not(.fixed-top) a.sitelogo {
+  padding-top: 0.7rem;
+  padding-bottom: 0.7rem;
 }
 .sitetitles {
   display: inline-block;
